fixing search input and button alignment

--- a/src/assets/styles/searchbar.css
+++ b/src/assets/styles/searchbar.css
@@ -6,6 +6,7 @@
 	width: 150px;
 	height: 35px;
 	margin-left: 10px;
+	margin-top: -1px;
 	border: none;
 }
 
